<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Myo Baxter</string>
    <string name="hello_world">Hello world!</string>
    <string name="scan">Scan</string>
    <string name="pose_fist">Fist</string>
    <string name="pose_wavein">Wave In</string>
    <string name="pose_waveout">Wave Out</string>
    <string name="pose_fingersspread">Fingers Spread</string>
    <string name="pose_rest">Rest</string>
    <string name="arm_left">Left Arm</string>
    <string name="arm_right">Right Arm</string>
    <string name="unlocked">Unlocked</string>
    <string name="locked">Locked</string>
    <string name="unsynced">Unsynced</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="unknown">Unknown</string>
    <string name="data_log">Data Log</string>
    <string name="lock_state">Lock State: </string>
    <string name="pose">Pose: </string>
    <string name="gyroX">Gyro X: </string>
    <string name="gyroY">Gyro Y: </string>
    <string name="gyroZ">Gyro Z: </string>
    <string name="accelX">Accel X: </string>
    <string name="accelY">Accel Y: </string>
    <string name="accelZ">Accel Z: </string>
    <string name="velocityX">Velocity X: </string>
    <string name="velocityY">Velocity Y: </string>
    <string name="velocityZ">Velocity Z: </string>
    <string name="positionX">Position X: </string>
    <string name="positionY">Position Y: </string>
    <string name="positionZ">Position Z: </string>
    <string name="roll">Roll: </string>
    <string name="pitch">Pitch: </string>
    <string name="yaw">Yaw: </string>
    <string name="status">Status: </string>
    <string name="arm_synced">Arm Synced: </string>
    <string name="short_vibrate">Short Vibrate</string>
    <string name="medium_vibrate">Medium Vibrate</string>
    <string name="long_vibrate">Long Vibrate</string>
    <string name="short_vibrate_five_times">Short Vibrate x5</string>
    <string name="vibrate_demo">Vibrate Demo</string>
    <string name="mix_vibrate">Mix</string>
    <string name="long_vibrate_five_times">Long Vibrate x5</string>
    <string name="medium_vibrate_five_times">Medium Vibrate x5</string>
    <string name="short_vibrate_twenty_five_times">Short Vibrate x25</string>
    <string name="reset">Myo Calibrated</string>
    <string name="reset_sensors">Reset Sensors</string>
    <string name="expect_one_myo">One Myo</string>
    <string name="expect_two_myo">Two Myos</string>
    <string name="not_enough_samples">Not enough samples to calibrate</string>
    <string name="enable">enable</string>
    <string name="disable">disable</string>
    <string name="calibrated">calibrated</string>

</resources>
