<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context="com.rad.myobaxter.MenuActivity"
    tools:ignore="MergeRootFrame">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/short_vibrate"
        android:onClick="shortVibrate" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/medium_vibrate"
        android:onClick="mediumVibrate" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/long_vibrate"
        android:onClick="longVibrate" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/short_vibrate_five_times"
        android:onClick="fiveTimeShortVibrate" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/medium_vibrate_five_times"
        android:onClick="fiveTimeMediumVibrate" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/long_vibrate_five_times"
        android:onClick="fiveTimeLongVibrate" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mix_vibrate"
        android:onClick="mixtureVibrate" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/short_vibrate_twenty_five_times"
        android:onClick="twentyFiveTimeShortVibrate" />

</LinearLayout>
