<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnWidth="90dp"
    android:numColumns="auto_fit"
    android:verticalSpacing="10dp"
    android:horizontalSpacing="10dp"
    android:stretchMode="columnWidth"
    android:gravity="center"
    tools:context="com.rad.myobaxter.DataLogActivity"
    tools:ignore="MergeRootFrame">

    <TextView
        android:id="@+id/title"
        android:text="@string/data_log"
        android:textSize="50dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        tools:ignore="SpUsage"
        android:layout_row="0"
        android:layout_column="0" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lock_state"
        android:text="@string/lock_state"
        android:textSize="20dp"
        tools:ignore="SpUsage"
        android:layout_row="1"
        android:layout_column="0" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/locked"
        android:text="@string/locked"
        android:textSize="20dp"
        tools:ignore="SpUsage"
        android:layout_row="1"
        android:layout_column="1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/status"
        android:text="@string/status"
        android:textSize="20dp"
        tools:ignore="SpUsage"
        android:layout_row="2"
        android:layout_column="0" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/connection_status"
        android:text="@string/disconnected"
        android:textSize="20dp"
        tools:ignore="SpUsage"
        android:layout_row="2"
        android:layout_column="1" />
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/arm_synced"
        android:text="@string/arm_synced"
        android:textSize="20dp"
        tools:ignore="SpUsage"
        android:layout_row="3"
        android:layout_column="0" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/sync_status"
        android:text="@string/unsynced"
        android:textSize="20dp"
        tools:ignore="SpUsage"
        android:layout_row="3"
        android:layout_column="1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/gyroX"
        android:text="@string/gyroX"
        android:textSize="20dp"
        tools:ignore="SpUsage"
        android:layout_row="4"
        android:layout_column="0" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/gyroXValue"
        android:text="0"
        android:textSize="20dp"
        tools:ignore="SpUsage"
        android:layout_row="4"
        android:layout_column="1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/gyroY"
        android:text="@string/gyroY"
        android:textSize="20dp"
        tools:ignore="SpUsage"
        android:layout_row="5"
        android:layout_column="0" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/gyroYValue"
        android:text="0"
        android:textSize="20dp"
        tools:ignore="SpUsage"
        android:layout_row="5"
        android:layout_column="1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/gyroZ"
        android:text="@string/gyroZ"
        android:textSize="20dp"
        tools:ignore="SpUsage"
        android:layout_row="6"
        android:layout_column="0" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/gyroZValue"
        android:text="0"
        android:textSize="20dp"
        tools:ignore="SpUsage"
        android:layout_row="6"
        android:layout_column="1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/accelX"
        android:text="@string/accelX"
        android:textSize="20dp"
        tools:ignore="SpUsage"
        android:layout_row="7"
        android:layout_column="0" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/accelXValue"
        android:text="0"
        android:textSize="20dp"
        tools:ignore="SpUsage"
        android:layout_row="7"
        android:layout_column="1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/accelY"
        android:text="@string/accelY"
        android:textSize="20dp"
        tools:ignore="SpUsage"
        android:layout_row="8"
        android:layout_column="0" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/accelYValue"
        android:text="0"
        android:textSize="20dp"
        tools:ignore="SpUsage"
        android:layout_row="8"
        android:layout_column="1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/accelZ"
        android:text="@string/accelZ"
        android:textSize="20dp"
        tools:ignore="SpUsage"
        android:layout_row="9"
        android:layout_column="0" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/accelZValue"
        android:text="0"
        android:textSize="20dp"
        tools:ignore="SpUsage"
        android:layout_row="9"
        android:layout_column="1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/roll"
        android:text="@string/roll"
        android:textSize="20dp"
        tools:ignore="SpUsage"
        android:layout_row="10"
        android:layout_column="0" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/rollValue"
        android:text="0"
        android:textSize="20dp"
        tools:ignore="SpUsage"
        android:layout_row="10"
        android:layout_column="1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/pitch"
        android:text="@string/pitch"
        android:textSize="20dp"
        tools:ignore="SpUsage"
        android:layout_row="11"
        android:layout_column="0" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/pitchValue"
        android:text="0"
        android:textSize="20dp"
        tools:ignore="SpUsage"
        android:layout_row="11"
        android:layout_column="1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/yaw"
        android:text="@string/yaw"
        android:textSize="20dp"
        tools:ignore="SpUsage"
        android:layout_row="12"
        android:layout_column="0" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/yawValue"
        android:text="0"
        android:textSize="20dp"
        tools:ignore="SpUsage"
        android:layout_row="12"
        android:layout_column="1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/pose"
        android:text="@string/pose"
        android:textSize="20dp"
        tools:ignore="SpUsage"
        android:layout_row="13"
        android:layout_column="0" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/poseValue"
        android:text="None"
        android:textSize="20dp"
        tools:ignore="SpUsage"
        android:layout_row="13"
        android:layout_column="1" />

</GridLayout>
